fix: do not export to database in tests

--- a/tests/config/hk_process.yaml
+++ b/tests/config/hk_process.yaml
@@ -6,6 +6,7 @@ work-folder: .work
 destination:
   folder: output/
   filename: result.csv
+  export-to-database: false
 
 packet-definition:
   hk: src/imap_mag/xtce/tlm_20240724.xml
