--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ pandas = "^2.2.2"
 imap-data-access = "^0.7.0"
 cdflib = "^1.3.1"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
+wiremock = {git = "git@github.com:ImperialCollegeLondon/python-wiremock.git", rev = "fix-test-containers-on-windows"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
@@ -38,7 +39,6 @@ pytest-cov = "^5.0.0"
 pyinstaller = "^6.5.0"
 pre-commit = "^3.8.0"
 ruff = "^0.5.4"
-wiremock = "^2.6.1"
 docker = "^7.1.0"
 testcontainers = "^4.7.2"
 
