clone from https rather than ssh

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,7 +31,7 @@ pandas = "^2.2.2"
 imap-data-access = "^0.7.0"
 cdflib = "^1.3.1"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
-wiremock = {git = "git@github.com:ImperialCollegeLondon/python-wiremock.git", rev = "fix-test-containers-on-windows"}
+wiremock = {git = "https://github.com/ImperialCollegeLondon/python-wiremock.git", rev = "fix-test-containers-on-windows"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
