fix: more fixes to permissions for action and packaging

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,7 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     permissions:
-      contents: read
-      actions: read
-      checks: write
+      pull-requests: write
     # map step outputs to job outputs so they can be share among jobs
     outputs:
       package_version: ${{ env.PACKAGE_VERSION }}
