Squashed commit of the following:
commit ee06eb90cca2bd84988c5294ab91167d40bc8568
Author: Michele Facchinelli <m.facchinelli@imperial.ac.uk>
Date:   Fri Aug 16 09:53:09 2024 +0000

    fix: add packages permission

commit d0bac86adbeca2ef394d24c4356bbee1b68ae40a
Author: Michele Facchinelli <m.facchinelli@imperial.ac.uk>
Date:   Fri Aug 16 09:47:17 2024 +0000

    fix: add checks permissions

commit 80b3b92677b91dbd75e5775882a476402948fd45
Author: Michele Facchinelli <m.facchinelli@imperial.ac.uk>
Date:   Fri Aug 16 09:44:44 2024 +0000

    fix: permissions for CI actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,6 +39,9 @@ jobs:
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     permissions:
+      actions: write
+      checks: write
+      packages: write
       pull-requests: write
     # map step outputs to job outputs so they can be share among jobs
     outputs:
