--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -208,6 +208,7 @@ jobs:
 
   build_single_file_binary:
     strategy:
+      fail-fast: false
       matrix:
         os: [linux, windows]
         include:
@@ -255,13 +256,15 @@ jobs:
           shell: bash
 
         - uses: addnab/docker-run-action@v3
-          continue-on-error: true
           with:
             registry: gcr.io
             image: ${{ matrix.image }}
             options: -v ${{ github.workspace }}:/src/
             run: |
-                echo 'wine '\''C:\Program Files\Git\bin\git.exe'\'' "$@"' > /usr/bin/git
+                if [[ "$OSTYPE" == "msys" ]]
+                then
+                    echo 'wine '\''C:\Program Files\Git\bin\git.exe'\'' "$@"' > /usr/bin/git
+                fi
                 python -m pip install poetry
                 python -m poetry self add poetry-pyinstaller-plugin
                 python -m poetry install
