--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ alembic = "^1.13.2"
 sqlalchemy-utils = "^0.41.2"
 requests = "^2.32.3"
 pandas = "^2.2.2"
-imap-data-access = {git = "https://github.com/ImperialCollegeLondon/imap-data-access.git", rev = "main"}
+imap-data-access = "^0.8.0"
 cdflib = "^1.3.1"
 single-version = "^1.6.0"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
