First example of dockerfile with baked in matlab

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,6 +3,8 @@
 
 # Allow files and directories
 !/dist
+!/src/matlab
+!/deploy
 #!/dist/file.txt
 
 # Ignore unnecessary files inside allowed directories
