--- a/calibration_application_config.yaml
+++ b/calibration_application_config.yaml
@@ -1,8 +1,9 @@
 source:
-  folder: /data/science/imap/mag/l1b/2025/05
+  folder: /data/science/imap/mag/l1b/2025/10
+  calibration_folder: /data/science/imap/mag/calibration/2025/10
 
 work-folder: .work
 
 destination:
-  folder: /data/science/imap/mag/l2/2025/05
-  filename: imap_mag_l2_norm-mago_20250511_v000.cdf
+  folder: /data/science/imap/mag/l2/2025/10
+  filename: imap_mag_l2_norm-mago_20251017_v000.json
