dev: add SQL database management extensions

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -70,7 +70,10 @@
                 "ms-python.mypy-type-checker",
                 "ms-azuretools.vscode-docker",
                 "github.vscode-github-actions",
-                "charliermarsh.ruff"
+                "charliermarsh.ruff",
+                "ms-ossdata.vscode-postgresql",
+                "mtxr.sqltools",
+                "mtxr.sqltools-driver-pg"
             ]
         }
     },
