--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ prefect = {extras = ["shell"], version = "^3.1.7"}
 prefect-docker = "^0.6.1"
 psycopg2 = "^2.9.10"
 psycopg2-binary = "^2.9.10"
+spacepy = "^0.7.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
