--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,8 +25,13 @@ permissions:
   packages: write
   pull-requests: write
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.head_ref || github.ref_name }}
+  cancel-in-progress: true
+
 env:
   PREFERED_PYTHON_VERSION: '3.12'
+  # TODO: test should not rely on a real auth code
   WEBPODA_AUTH_CODE: ${{ secrets.WEBPODA_AUTH_CODE }}
 jobs:
   qa:
