--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,7 @@ pydantic = "^2.10.2"
 space-packet-parser = "^5.0.1"
 xarray = "^2024.7.0"
 numpy = "^2.1.3"
-typer = "^0.12.5"
+typer = "^0.15.2"
 sqlalchemy = "^2.0.35"
 alembic = "^1.13.2"
 sqlalchemy-utils = "^0.41.2"
@@ -35,6 +35,7 @@ psycopg = {extras = ["binary"], version = "^3.2.1"}
 prefect = {extras = ["shell"], version = "^3.1.7"}
 prefect-docker = "^0.6.1"
 spacepy = "^0.7.0"
+pydantic-settings = "^2.8.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
@@ -55,6 +56,12 @@ imap-db = 'imap_db.main:app'
 [tool.pytest.ini_options]
 pythonpath = [
   ".", "src"
+]
+minversion = "8.0"
+addopts = "-s"
+testpaths = [
+    "tests/*.py",
+    "tests/**/*.py",
 ]
 
 [build-system]
