Change calibration configuration to work with new files

--- a/calibration_application_config.yaml
+++ b/calibration_application_config.yaml
@@ -1,9 +1,9 @@
 source:
-  folder: /data/science/imap/mag/l1b/2025/10
-  calibration_folder: /data/science/imap/mag/calibration/2025/10
+  folder: /data/science/imap/mag/l1b/2025/5
+  calibration_folder: /data/science/imap/mag/calibration/2025/5
 
 work-folder: .work
 
 destination:
   folder: /data/science/imap/mag/l2
-  filename: imap_mag_l2_norm-mago_20251017_v000.json
+  filename: imap_mag_l2_burst-mago_20250506_v000.csv
