--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ pydantic-settings = "^2.8.1"
 pytest = "^8.3.1"
 pytest-cov = "^5.0.0"
 pytest-mock = "^3.14.0"
+pytest-asyncio = "^0.26.0"
 pyinstaller = "^6.10.0"
 pre-commit = "^3.8.0"
 ruff = "^0.8.1"
