--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,7 +29,7 @@ alembic = "^1.13.2"
 sqlalchemy-utils = "^0.41.2"
 requests = "^2.32.3"
 pandas = "^2.2.2"
-imap-data-access = {git = "https://github.com/daralynnrhode/imap-data-access", branch = "query_by_ingestion"}
+imap-data-access = "^0.25.0"
 cdflib = "^1.3.1"
 psycopg = {extras = ["binary"], version = "^3.2.1"}
 prefect = {extras = ["shell"], version = "^3.1.7"}
