--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -5,7 +5,7 @@
 
 # General application conifguration:
 work_folder: '.work'
-data_store:  'output/'
+data_store:  'data/'
 packet_definition: 'xtce/tlm_20241024.xml'
 
 # Command specific configuration:
