Revert "fix: output files should be created in `data/` folder"
This reverts commit f8de6815a6f5649d0adf56b58e215f4c17bc1238.

--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -5,7 +5,7 @@
 
 # General application conifguration:
 work_folder: '.work'
-data_store:  'data/'
+data_store:  'output/'
 packet_definition: 'xtce/tlm_20241024.xml'
 
 # Command specific configuration:
