--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -218,11 +218,11 @@ jobs:
         os: [linux, windows]
         include:
           - os: linux
-            image: batonogov/pyinstaller-linux:v4.7.2 # This is the version that supports Python 3.12
+            image: batonogov/pyinstaller-linux:latest
             executable: imap-mag
             folder: manylinux_2_36_x86_64
           - os: windows
-            image: batonogov/pyinstaller-windows:v4.7.2 # This is the version that supports Python 3.12
+            image: batonogov/pyinstaller-windows:v4.7.1 # This is the version that supports Python 3.12
             executable: imap-mag.exe
             folder: win_amd64
 
