task: replace `appuser` and `5678` with IMAP-specific user details

--- a/defaults.env
+++ b/defaults.env
@@ -1,6 +1,8 @@
 PREFECT_API_URL=http://prefect:4200/api
 IMAP_IMAGE_TAG=local-dev
 IMAP_VOLUMES=/mnt/imap-data/dev:/data
+IMAP_USERNAME=imap_pipeline
+IMAP_USERID=5679
 SQLALCHEMY_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/imap
 WEBPODA_AUTH_CODE==
 SDC_AUTH_CODE=
