Pushing to diff image name

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -248,7 +248,7 @@ jobs:
         uses: docker/metadata-action@v5
         if: matrix.python-versions == env.PREFERED_PYTHON_VERSION
         with:
-          images: ghcr.io/${{ github.repository }}
+          images: ghcr.io/matlab-${{ github.repository }}
           tags: |
             # minimal
             type=semver,pattern={{version}}
