Use github actions variables for calibration code repository

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,6 +32,7 @@ concurrency:
 env:
   PREFERED_PYTHON_VERSION: '3.12'
   MLM_LICENSE_TOKEN: ${{secrets.MLM_LICENSE_TOKEN }}
+  CALIBRATION_CODE_LOCATION: 'src/matlab'
 jobs:
   qa:
     runs-on: ubuntu-latest
@@ -222,11 +223,14 @@ jobs:
           echo "PACKAGE_VERSION=$(poetry version --short)" >> $GITHUB_ENV
         shell: bash
 
-      - name: Check out calibration code
+      - name: Check out calibration code into ${{ env.CALIBRATION_CODE_LOCATION }} in repository
         uses: actions/checkout@v4
         with:
-            path: 'src/matlab'
-            repository: ImperialCollegeLondon/IMAP_MAG_Experimental_Calibration
+            path: ${{ env.CALIBRATION_CODE_LOCATION}}
+            sparse-checkout: |
+                +calibration
+                +general
+            repository: ${{ vars.CALIBRATION_REPO }}
             ssh-key: ${{ secrets.IMAP_MAG_CALIBRATION_DEPLOY_KEY }}
 
       - name: build
@@ -255,7 +259,7 @@ jobs:
         uses: docker/metadata-action@v5
         if: matrix.python-versions == env.PREFERED_PYTHON_VERSION
         with:
-          images: ghcr.io/${{ github.repository }}/matlab-imap-pipeline-core
+          images: ghcr.io/${{ github.repository }}/${{ vars.CALIBRATION_IMAGE_NAME }}
           tags: |
             # minimal
             type=semver,pattern={{version}}
