refactor: remove old config functionality

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -24,9 +24,7 @@
         },
         {
             "args": [
-                "process",
-                "--config",
-                "config.yaml"
+                "process"
             ],
             "console": "integratedTerminal",
             "justMyCode": true,
