--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -23,6 +23,13 @@ fetch_science:
     work_sub_folder:
     publish_to_data_store: true
 
+fetch_spice:
+    api:
+        url_base: 'https://api.dev.imap-mission.com'
+        auth_code:
+    work_sub_folder:
+    publish_to_data_store: true
+
 publish:
     api:
         url_base: 'https://api.dev.imap-mission.com'
