--- a/pyproject.toml
+++ b/pyproject.toml
@@ -36,6 +36,7 @@ prefect = {extras = ["shell"], version = "^3.1.7"}
 prefect-docker = "^0.6.1"
 spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
+ccsdspy = "^1.4.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
