--- a/.env.template
+++ b/.env.template
@@ -2,6 +2,6 @@
 SQLALCHEMY_URL=postgresql+psycopg://USER_HERE:PASSWORD_HERE@db:5432/imap
 
 # API credentials fpr LASP PODA API - See https://lasp.colorado.edu/ops/imap/poda/
-WEBPODA_AUTH_CODE=
+IMAP_WEBPODA_TOKEN=
 # API credentials for SDC API - See https://github.com/IMAP-Science-Operations-Center/imap-data-access
-SDC_AUTH_CODE=
+IMAP_API_KEY=
