--- a/defaults.env
+++ b/defaults.env
@@ -4,7 +4,7 @@ IMAP_VOLUMES=/mnt/imap-data/dev:/data
 IMAP_USERNAME=imap_pipeline
 IMAP_USERID=5679
 SQLALCHEMY_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/imap
-WEBPODA_AUTH_CODE==
-SDC_AUTH_CODE=
+IMAP_WEBPODA_TOKEN=
+IMAP_API_KEY=
 PREFECT_LOGGING_LEVEL=DEBUG
 PREFECT_LOGGING_EXTRA_LOGGERS=imap_mag
