task: add creation, modified, and deleted dates

--- a/src/imap_db/alembic.ini
+++ b/src/imap_db/alembic.ini
@@ -2,7 +2,7 @@
 
 [alembic]
 # path to migration scripts
-script_location = src/imap_db/migrations
+script_location = migrations
 
 #sqlalchemy.url = postgresql://postgres:postgres@db/imap
 sqlalchemy.url = postgresql+psycopg://postgres:postgres@host.docker.internal:5432/imap
