--- a/.github/workflows/pre-commit_autoupdate.yaml
+++ b/.github/workflows/pre-commit_autoupdate.yaml
@@ -3,6 +3,11 @@ name: Pre-Commit Auto-Update
 on:
   schedule:
     - cron: "0 0 1 * *" # midnight every first of the month
+  workflow_dispatch:
+
+permissions:
+  contents: write
+  pull-requests: write
 
 jobs:
   auto-update:
