--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ ruff = "^0.8.1"
 docker = "^7.1.0"
 testcontainers = "^4.10.0"
 wiremock = {git = "https://github.com/ImperialCollegeLondon/python-wiremock.git", rev = "fix-test-containers-on-windows"}
+lxml = "^6.0.0"
 
 [tool.poetry.scripts]
 # can execute via poetry, e.g. `poetry run imap-mag hello world`
