--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -92,7 +92,7 @@ jobs:
         shell: bash
 
       - name: build --skip-tests
-        run: ./build.sh
+        run: ./build.sh --skip-tests
 
       - name: Build wheels and source tarball
         run: ./pack.sh
@@ -162,6 +162,34 @@ jobs:
           fail_on_unmatched_files: true
           files: |
             dist/${{ env.PACKAGE_NAME }}_python${{matrix.python-versions}}_${{ env.PACKAGE_VERSION }}.zip
+
+  tests:
+    strategy:
+      matrix:
+        python-versions: ["3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-versions }}
+      - name: Check out calibration code into ${{ env.CALIBRATION_CODE_LOCATION }} in repository
+        uses: actions/checkout@v4
+        with:
+          path: ${{ env.CALIBRATION_CODE_LOCATION}}
+          sparse-checkout: |
+            +calibration
+            +general
+            external-packages
+          repository: ${{ vars.CALIBRATION_REPO }}
+          ssh-key: ${{ secrets.IMAP_MAG_CALIBRATION_DEPLOY_KEY }}
+          ref: v0.1.1
+      - name: Set up MATLAB
+        uses: matlab-actions/setup-matlab@v2
+      - name: Run Tests
+        run: |
+            python -m pip install poetry
+            ./build.sh
 
   matlab-build:
     strategy:
@@ -244,8 +272,8 @@ jobs:
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
 
-      - name: build
-        run: ./build.sh
+      - name: build --skip-tests
+        run: ./build.sh --skip-tests
 
       - name: Build wheels and source tarball
         run: ./pack.sh
