--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,7 +48,7 @@ pre-commit = "^3.8.0"
 ruff = "^0.8.1"
 docker = "^7.1.0"
 testcontainers = "^4.10.0"
-wiremock = {git = "https://github.com/ImperialCollegeLondon/python-wiremock.git", rev = "fix-test-containers-on-windows"}
+wiremock = "^2.7.0"
 
 [tool.poetry.scripts]
 # can execute via poetry, e.g. `poetry run imap-mag hello world`
