task: build ci on main & add py3.13

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -6,6 +6,9 @@ on:
       - "README**"
     tags:
       - "v*"
+    branches:
+      - "main"
+      - "rel/*"
   pull_request:
     branches:
       - "*"
