--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -167,7 +167,7 @@ jobs:
   tests:
     strategy:
       matrix:
-        python-versions: ["3.10", "3.11", "3.12"]
+        python-versions: ["3.10", "3.11", "3.12", "3.13"]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -219,7 +219,7 @@ jobs:
   matlab-build:
     strategy:
       matrix:
-        python-versions: ["3.10", "3.11", "3.12"]
+        python-versions: ["3.10", "3.11", "3.12", "3.13"]
         os: [ubuntu-latest]
     runs-on: ${{ matrix.os }}
     # map step outputs to job outputs so they can be share among jobs
