--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,7 @@ concurrency:
 
 env:
   PREFERED_PYTHON_VERSION: "3.12"
+  CALIBRATION_TAG: "v0.1.2"
   MLM_LICENSE_TOKEN: ${{secrets.MLM_LICENSE_TOKEN }}
   CALIBRATION_CODE_LOCATION: "src/matlab/calibration"
 jobs:
@@ -181,7 +182,7 @@ jobs:
             external-packages
           repository: ${{ vars.CALIBRATION_REPO }}
           ssh-key: ${{ secrets.IMAP_MAG_CALIBRATION_DEPLOY_KEY }}
-          ref: v0.1.1
+          ref: ${{ env.CALIBRATION_TAG }}
       - name: Set up MATLAB
         uses: matlab-actions/setup-matlab@v2
       - name: Run Tests
@@ -289,7 +290,7 @@ jobs:
             external-packages
           repository: ${{ vars.CALIBRATION_REPO }}
           ssh-key: ${{ secrets.IMAP_MAG_CALIBRATION_DEPLOY_KEY }}
-          ref: v0.1.1
+          ref: ${{ env.CALIBRATION_TAG }}
 
       - name: build --skip-tests
         run: ./build.sh --skip-tests
