--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,7 +32,7 @@ concurrency:
 
 env:
   PREFERED_PYTHON_VERSION: "3.12"
-  CALIBRATION_TAG: "fix/noop-not-adding-science-to-metadata"
+  CALIBRATION_TAG: "v0.1.5"
   MLM_LICENSE_TOKEN: ${{secrets.MLM_LICENSE_TOKEN }}
   CALIBRATION_CODE_LOCATION: "src/matlab/calibration"
 jobs:
