--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -11,7 +11,7 @@ packet_definition: 'xtce/tlm_20241024.xml'
 # Command specific configuration:
 fetch_binary:
     api:
-        url_base: 'https://lasp.colorado.edu/ops/imap/poda/dap2/'
+        url_base: 'https://lasp.colorado.edu/ops/imap/poda/dap2/packets/SID2/'
         auth_code:
     work_sub_folder:
     publish_to_data_store: true
