--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,6 +37,7 @@ prefect-docker = "^0.6.1"
 spacepy = "^0.7.0"
 pydantic-settings = "^2.8.1"
 ccsdspy = "^1.4.2"
+prefect-managedfiletransfer = "^0.2.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.4.1"
