task: replace pyenv with uv

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,16 +3,23 @@
 # see https://github.com/devcontainers/images/blob/main/src/python/.devcontainer/Dockerfile
 
 ## we start with the version we want as the system version
-FROM mcr.microsoft.com/devcontainers/python:3.12
+FROM mcr.microsoft.com/devcontainers/python:3.13-bullseye
 
-# And then use pyenv to install all the other versions as the vscode user
+# install uv from the UV image
+COPY --from=ghcr.io/astral-sh/uv:latest /uv /uvx /bin/
+
 ARG PYTHON_VERSIONS="3.10 3.11 3.12 3.13"
 USER vscode
-ENV PYENV_ROOT="/home/vscode/.pyenv"
-ENV PATH="$PYENV_ROOT/bin:$PATH"
-RUN curl https://pyenv.run | bash
-RUN $PYENV_ROOT/bin/pyenv install -v ${PYTHON_VERSIONS}
 
-USER root
-RUN apt-get update && apt-get install -y --no-install-recommends \
+# Install multiple Python versions using `uv` as the non-root user
+RUN uv python install $PYTHON_VERSIONS --install-dir /home/vscode/.local/bin
+
+RUN sudo apt-get update && sudo apt-get install --no-install-recommends --no-install-suggests -y \
     postgresql-client
+RUN python3 -m pip install --user pipx && \
+    python3 -m pipx ensurepath
+RUN pipx ensurepath && \
+    pipx install poetry
+
+ENV PATH="/home/vscode/.local/bin:${PATH}"
+
