--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -29,5 +29,6 @@
             "database": "imap",
             "username": "postgres"
         }
-    ]
+    ],
+    "python-envs.pythonProjects": []
 }
