tests: refactor tests so pass & no circular refs

--- a/imap-mag-config.yaml
+++ b/imap-mag-config.yaml
@@ -35,10 +35,10 @@ process:
 upload:
     root_path: "Flight Data (dev)"
     paths_to_match:
-        - "*/science/mag/l1b/*"
-        - "*/science/mag/l1c/*"
-        - "*/science/mag/l1d/*"
-        - "*/science/mag/l2/*"
-        - "*/science/mag/l2-pre/*"
-        - "*/hk/mag/l1/*"
+        - "*science/mag/l1b/*"
+        - "*science/mag/l1c/*"
+        - "*science/mag/l1d/*"
+        - "*science/mag/l2/*"
+        - "*science/mag/l2-pre/*"
+        - "*hk/mag/l1/*"
 
