--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,7 +7,7 @@
         "editor.formatOnSave": true
     },
     "python.testing.pytestArgs": [
-        "tests"
+        "-s", "tests"
     ],
     "python.testing.pytestEnabled": true,
     "python.testing.unittestEnabled": false,
